--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Db": "Server=mysql-projetwebserveur.alwaysdata.net ;Database=projetwebserveur_connexion ;Port= 3306; Uid=279794_simuser ; Pwd= SimpleUser12;"
+  }
+ 
 }
