--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Db": "Server=mysql-projetwebserveur.alwaysdata.net ;Database=projetwebserveur_connexion ;Port= 3306; Uid=279794_simuser ; Pwd= SimpleUser12;"
+    "Db": "Server=mysql-mproulx.alwaysdata.net;Database=mproulx_5w6_readit; Port=3306; Uid=mproulx; Pwd=Admin22!; SslMode=Preferred"
   }
  
 }
