--- a/Readit.csproj
+++ b/Readit.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="MySql.Data" Version="8.0.30" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\DL\" />
+  </ItemGroup>
+
 </Project>
