--- a/Readit.csproj
+++ b/Readit.csproj
@@ -14,6 +14,7 @@
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	  </PackageReference>
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="6.0.9"/>
 	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.9" />
 	  <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.10" />
 	  <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.2" />
